# zako-for-bit-war

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
webapp/: __init__.py  config.py  extensions.py  filters.py  forms.py  identicon.py  models.py
webapp/controllers/: forum.py  main.py
webapp/controllers/zako/: views.py  zako_battle.py  zako_lex.py  zako_parser.py  zako_strategy.py  zako_yacc.py
webapp/static/js/: menu.js
webapp/templates/forum/: add.html  forum.html  post.html
webapp/templates/main/: base.html  home.html  index.html  login.html  register.html
webapp/templates/zako/: about.html  editor.html  library.html  pve.html  pvp.html
