[tool.poetry]
name = "ZakoForBitWar"
version = "0.5.0"
description = "Web Project about \"Bit War Online\", using Zako language"
authors = ["Gackle <gackle83@outlook.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-admin = "^1.5.6"
flask-script = "^2.0.6"
flask-bcrypt = "^0.7.1"
flask-sqlalchemy = "^2.4.3"
pillow = "^9.0.0"
ply = "^3.11"
pymysql = "^0.9.3"
WTForms = "^2.3.1"
flask-wtf = "^0.14.3"
email_validator = "^1.1.1"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.6.0"
pytest = "^5.4.2"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
